WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53386
Fix fat build for both 32-bit and 64-bit under llvm-gcc 4.2
https://bugs.webkit.org/show_bug.cgi?id=53386
Summary
Fix fat build for both 32-bit and 64-bit under llvm-gcc 4.2
Maciej Stachowiak
Reported
2011-01-29 16:08:20 PST
Fix fat build for both 32-bit and 64-bit under llvm-gcc 4.2
Attachments
Patch
(9.85 KB, patch)
2011-01-29 16:09 PST
,
Maciej Stachowiak
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2011-01-29 16:09:07 PST
Created
attachment 80579
[details]
Patch
mitz
Comment 2
2011-01-29 16:11:54 PST
Comment on
attachment 80579
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=80579&action=review
> Source/WebCore/platform/mac/ScrollAnimatorMac.mm:353 > + isHorizontallyStretched = (stretchAmount.width() == 0) ? false : true; > + isVerticallyStretched = (stretchAmount.height() == 0) ? false : true;
Simply isHorizontallyStretched = stretchAmount.width(); should do.
Maciej Stachowiak
Comment 3
2011-01-29 16:22:59 PST
Committed
r77075
: <
http://trac.webkit.org/changeset/77075
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug