2011-01-29  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Dan Bernstein.

        Fix fat build for both 32-bit and 64-bit under llvm-gcc 4.2
        https://bugs.webkit.org/show_bug.cgi?id=53386

        * platform/mac/ScrollAnimatorMac.mm:
        (WebCore::elasticDeltaForReboundDelta):
        (WebCore::scrollWheelMultiplier):
        (WebCore::ScrollAnimatorMac::smoothScrollWithEvent):
        (WebCore::ScrollAnimatorMac::beginScrollGesture):
        (WebCore::roundTowardZero):
        (WebCore::ScrollAnimatorMac::snapRubberBandTimerFired):


Canonical link: https://commits.webkit.org/67228@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77075 268f45cc-cd09-0410-ab3c-d52691b4dbfc